fixed small header bug on mobile login view

--- a/portfolio/src/View/Mobile/LoginRegister/Login/Login.css
+++ b/portfolio/src/View/Mobile/LoginRegister/Login/Login.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 90vh;
+    height: 80vh;
     width: 100%;
 }
 
@@ -18,7 +18,7 @@
     border: 2px solid #666666;
     background-color: #181818;
     padding-bottom: 30px;
-    margin-bottom: 25%;
+    margin-top: 40%;
 }
 
 .main_login_container h1 {
